Fixed post Author Badge on Comment template misplacing on Mobile/Tablet

--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -217,7 +217,10 @@
 			height: 18px;
 			position: absolute;
 			background: lighten( $color__link, 8% );
-			right: calc(100% + #{$size__spacing-unit * .25});
+			right: calc(100% - #{$size__spacing-unit * 3});
+			@include media(tablet) {
+				right: calc(100% + #{$size__spacing-unit * .25});
+			}
 			top: -3px;
 			width: 18px;
 
